--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,6 +3,25 @@ layout: default
 ---
 <div id="home-headline">
 	<div id="home-headline-content">
-		Johan Andersson
+		<div id="home-headline-content-box">
+			<h1>Johan Andersson - Full stack developing</h1>
+			<p>
+				HTML &#9679; CSS &#9679; PHP &#9679; JavaScript &#9679; Java &#9679; SQL
+			</p>
+			<p class="lower">
+				<a href="" class="white-to-purple">
+				VIEW MY PROJECTS<br>
+				&#9660;
+				</a>
+			</p>
+		</div>
 	</div>
+</div>
+<div id="main-content">
+	<br><br><br><br>
+	<a href="/about/" class="no-style">
+	<div id="footer-top-border">
+		Learn more about Johan &#187;
+	</div>
+	</a>
 </div>
