--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,6 +7,5 @@
  	<meta name="description" content="{{ page.excerpt | default: site.description | strip_html | normalize_whitespace | truncate: 160 | escape }}">
 
  	<link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
- 	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
- 	
+ 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600|Roboto:100,300,400,500" rel="stylesheet">
  </head>
