--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,27 +1,37 @@
 ---
 layout: default
 ---
-<div id="home-headline">
-	<div id="home-headline-content">
-		<div id="home-headline-content-box">
-			<h1>Johan Andersson - Full stack developing</h1>
-			<p>
-				HTML &#9679; CSS &#9679; PHP &#9679; JavaScript &#9679; Java &#9679; SQL
-			</p>
-			<p class="lower">
-				<a href="" class="white-to-purple">
-				VIEW MY PROJECTS<br>
-				&#9660;
-				</a>
-			</p>
+
+<div id="main-content home">
+	<a id="projects" name="projects"></a>
+	<div class="home-item">
+		<div class="home-item-content">
+			<img src="/assets/img/hakk.png" class="home-item-img">
 		</div>
 	</div>
-</div>
-<div id="main-content">
-	<br><br><br><br>
-	<a href="/about/" class="no-style">
-	<div id="footer-top-border">
-		Learn more about Johan &#187;
+	<div class="home-item">
+		<div class="home-item-content">
+			<img src="/assets/img/thefruitbasket.png" class="home-item-img">
+		</div>
 	</div>
-	</a>
+	<div class="home-item">
+		<div class="home-item-content">
+			<img src="/assets/img/krustykookies.png" class="home-item-img">
+		</div>
+	</div>
+	<div class="home-item">
+		<div class="home-item-content">
+			<img src="/assets/img/hajtek.png" class="home-item-img">
+		</div>
+	</div>
+	<div class="home-item">
+		<div class="home-item-content">
+			<img src="/assets/img/hajtek2.png" class="home-item-img">
+		</div>
+	</div>
+	<div class="home-item">
+		<div class="home-item-content">
+			<img src="/assets/img/hajtek3.png" class="home-item-img">
+		</div>
+	</div>
 </div>
