--- a/_sass/rooter/_base.scss
+++ b/_sass/rooter/_base.scss
@@ -80,6 +80,20 @@ Images
 	margin-bottom: 10px;
 }
 
+.social-media-img {
+	float: left;
+	width: 40px;
+	margin-right: 10px;
+}
+
+.home-item-img {
+	width: 70%;
+	margin: 15%;
+	padding: 0;
+	display: block;
+	border: 5px solid #fff;
+}
+
 /*
 Clearfix
 */
