Made site more responsive, and fixed a bunch of bugs. Continued work on implementing blog and other stuff.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,15 +6,23 @@
 			</a>
 		</div>
 		<nav>
-			<ul>
-				{% for my_page in site.pages %}
-				{% if my_page.title %}
-				<li>
-					<a href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
-				</li>
-				{% endif %}
-				{% endfor %}
-			</ul>
+			<div class="menu-icon">
+				<svg height="32px" id="Layer_1" style="enable-background:new 0 0 32 32;" version="1.1" viewBox="0 0 32 32" width="32px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M4,10h24c1.104,0,2-0.896,2-2s-0.896-2-2-2H4C2.896,6,2,6.896,2,8S2.896,10,4,10z M28,14H4c-1.104,0-2,0.896-2,2  s0.896,2,2,2h24c1.104,0,2-0.896,2-2S29.104,14,28,14z M28,22H4c-1.104,0-2,0.896-2,2s0.896,2,2,2h24c1.104,0,2-0.896,2-2  S29.104,22,28,22z"/></svg>
+			</div>
+			<div class="responsive">
+				<ul>
+					<li>
+						<a href="/">HOME</a>
+					</li>
+					{% for my_page in site.pages %}
+					{% if my_page.title %}
+					<li>
+						<a href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
+					</li>
+					{% endif %}
+					{% endfor %}
+				</ul>
+			</div>
 		</nav>
 	</div>
 	{% if page.layout == 'home' %}
