--- a/_includes/home-headline.html
+++ b/_includes/home-headline.html
@@ -6,7 +6,7 @@
 				HTML &#9679; CSS &#9679; PHP &#9679; JavaScript &#9679; Java &#9679; SQL
 			</p>
 			<p class="lower">
-				<a href="#projects" class="white-to-purple">
+				<a href="#projects" class="white-to-dark">
 					VIEW MY PROJECTS<br>
 					&#9660;
 				</a>
