--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,4 +11,8 @@
 
  	<link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
  	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600|Roboto:100,300,400,500" rel="stylesheet">
+
+ 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+ 	<script src="/assets/js/responsive-menu.js"></script>
+
  </head>
