--- a/_includes/home-headline.html
+++ b/_includes/home-headline.html
@@ -3,12 +3,12 @@
 		<div id="home-headline-content-box">
 			<h1>Johan Andersson - Full stack developing</h1>
 			<p>
-				HTML &#9679; CSS &#9679; PHP &#9679; JavaScript &#9679; Java &#9679; SQL
+				HTML • CSS • PHP • JavaScript • Java • SQL
 			</p>
 			<p class="lower">
 				<a href="#projects" class="white-to-dark">
 					VIEW MY PROJECTS<br>
-					&#9660;
+					<i class="fa fa-caret-down" aria-hidden="true"></i>
 				</a>
 			</p>
 		</div>
