--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,17 +4,41 @@ layout: default
 <div id="main-content">
 	<div id="main-content-wrapper">
 		<div id="main-content-text">
+			<span class="treemap">
+			<a href="/blog/">
+				<i class="fa fa-arrow-left" aria-hidden="true"></i> Back
+			</a> to blog index
+		</span>
 			<article class="post" itemscope itemtype="http://schema.org/BlogPosting">
 
 				<header class="post-header">
-					<h1 class="post-title" itemprop="name headline">{{ page.title | escape }}</h1>
-					<p class="post-meta"><time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time>{% if page.author %} • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page.author }}</span></span>{% endif %}</p>
+					<h1 class="post-title" itemprop="name headline">{{ page.desc | escape }}</h1>
+					<p class="post-meta">
+						<i class="fa fa-calendar" aria-hidden="true"></i>
+						<time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y " }}</time>
+						<i class="fa fa-clock-o" aria-hidden="true"></i>
+						{{ page.date | date: "%H:%M"}}
+						{% if page.author %} by <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page.author }}</span></span>{% endif %}
+					</p>
 				</header>
 
 				<div class="post-content" itemprop="articleBody">
 					{{ content }}
 				</div>
-
+				<div class="post-author">
+					<div class="img-wrap">
+					<img src="/assets/img/johan.png" alt="Johan">
+					<a href="http://www.twitter.com/{{site.twitter_username}}" target="_blank">
+						<button class="follow-button" type="button"><i class="fa fa-twitter" aria-hidden="true"></i>&nbsp;@{{site.twitter_username}}</button>
+					</a>
+					</div>
+					<div class="text-wrap">
+					<h1>Written by {{page.author}}</h1>
+					<span class="author-description">{{page.authordesc}}</span>
+					</div>
+					
+				</div>
+				<h3>Comments</h3>
 				{% if site.shortname %}
 				{% include disqus_comments.html %}
 				{% endif %}
