Fixed a responsive bug on posts.

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -34,7 +34,7 @@ layout: default
 					</div>
 					<div class="text-wrap">
 					<h1>Written by {{page.author}}</h1>
-					<span class="author-description">{{page.authordesc}}</span>
+					<span class="author-description">{{site.authordesc}}</span>
 					</div>
 					
 				</div>
