--- a/_includes/page-headline.html
+++ b/_includes/page-headline.html
@@ -3,7 +3,11 @@
 		<div id="page-headline-content-box">
 			<h1> {{ page.title }}</h1>
 			<p>
+				{% if page.layout == 'post' %}
+				<time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y %H:%M"}}</time>
+				{% else %}
 				{{ page.desc }}
+				{% endif %}
 			</p>
 		</div>
 	</div>
