--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,7 +12,8 @@ layout: default
 			<article class="post" itemscope itemtype="http://schema.org/BlogPosting">
 
 				<header class="post-header">
-					<h1 class="post-title" itemprop="name headline">{{ page.desc | escape }}</h1>
+					<h1 class="post-title" itemprop="name headline">{{ page.title | escape }}</h1>
+					<p class="bread-text" itemprop="name breadtext">{{ page.desc | escape }}</p>
 					<p class="post-meta">
 						<i class="fa fa-calendar" aria-hidden="true"></i>
 						<time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y " }}</time>
