--- a/_includes/head.html
+++ b/_includes/head.html
@@ -21,6 +21,6 @@
  	<link rel="stylesheet" href="/assets/font-awesome-4.4.0/css/font-awesome.min.css">
 
  	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
- 	<script src="/assets/js/responsive-menu.js"></script>
+ 	<script type="text/javascript" src="/assets/js/responsive-menu.js"></script>
 
  </head>
