--- a/_includes/home-headline.html
+++ b/_includes/home-headline.html
@@ -1,7 +1,7 @@
 <div id="home-headline">
 	<div id="home-headline-content">
 		<div id="home-headline-content-box">
-			<h1>Johan Andersson - Full stack developing</h1>
+			<h1>Johan Andersson</h1>
 			<p>
 				HTML • CSS • PHP • JavaScript • Java • SQL
 			</p>
