--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,9 +5,10 @@
  	<meta name="apple-mobile-web-app-status-bar-style" content="#b17174">
 	<meta name="theme-color" content="#b17174">
 
+
 	<meta property="og:site_name" content="{{ site.title }}">
 	<meta property="og:title" content="{{ page.title }}" />
-	<meta property="og:description" content="{{ page.description }}">
+	<meta property="og:description" content="{{ site.description }}">
 	<meta property="og:url" content="http://www.rooter.se/{{page.url}}" />
 	<meta property="og:image" content="/assets/img/bg/bg2.jpg" />
 
