Minor fixes and contined writing on the blog post. Soon done with that.

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -25,5 +25,6 @@
 
  	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
  	<script type="text/javascript" src="/assets/js/responsive-menu.js"></script>
+ 	<script type="text/javascript" src="/assets/js/smooth-scroll.js"></script>
 
  </head>
