--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,6 +8,7 @@
 
 	<meta property="og:site_name" content="{{ site.title }}">
 	<meta property="og:title" content="{{ page.title }}" />
+	<meta property="og:type" content="website" />
 	<meta property="og:description" content="{{ site.description }}">
 	<meta property="og:url" content="http://www.rooter.se/{{page.url}}" />
 	<meta property="og:image" content="/assets/img/bg/bg2.jpg" />
